--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "styled-components": "^6.1.8",
+    "styled-icons": "^10.47.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
